<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#000000">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loaned_to" />

        <TextView
            android:id="@+id/who"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="5dp"
            android:text="@string/nobody" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2sp"
            android:layout_weight="1"
            android:background="#CCCCCC" />

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:paddingTop="5dp"
            android:text="@string/returned"
            android:width="150sp" />
    </LinearLayout>

